@@ -7,15 +7,21 @@ Restaurante em Terminal - RestaurARTE
 - Pedro Henrique Penha Piantino
 - Cibely Rodrigues de Pontes
 - Daniel Camargos da Cunha
+- Vitor Ribeiro Dalmazio Machado
 
 
 Database local automaticamente gerada pos Startup: `data/restaurarte.db`
 
 Arquivo Main: `src/main/java/me.faseh.restaurarte/Main.java`
 
-Utilizando o Gradle e possivel executar o programa atraves do terminal, certifique-se que esteja dentro da pasta do projeto e execute o seguinte comando:
-`./gradlew run --console=plain`
+## Como instalar o programa
+Utilizando o Gradle e o Git possivel executar o programa atraves do terminal, segue o passo a passo:
 
+`git clone https://github.com/meinards15/trabalho-algoritimo.git`
+`cd trabalho-algoritimo`
+`./gradlew run --console=plain --enable-native-access=ALL-UNNAMED`
+
+(Certifique-se que possui o Java 21 instalado no seu sistema, Caso não o possua você pode clicar [aqui](https://download.oracle.com/java/21/archive/jdk-21.0.10_windows-x64_bin.exe) para instalar-lo.)
 
 ## Os PDFs de Apresentação e Documentação podem ser encontrados dentro do diretorio abaixo:
 `PDFs/`
